--- a/GSBVisiteurs/src/vue/V_Menu.form
+++ b/GSBVisiteurs/src/vue/V_Menu.form
@@ -81,6 +81,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Medicament"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnMedicamentActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JToggleButton" name="btnQuitter">
       <Properties>
