--- a/GSBVisiteurs/src/vue/V_Connexion.form
+++ b/GSBVisiteurs/src/vue/V_Connexion.form
@@ -92,6 +92,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="ok"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnOkActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JToggleButton" name="btnQuitter">
       <Properties>
