--- a/GSBVisiteurs/src/vue/V_Visiteur.form
+++ b/GSBVisiteurs/src/vue/V_Visiteur.form
@@ -60,7 +60,7 @@
                           <Component id="txtNom" min="-2" pref="371" max="-2" attributes="0"/>
                           <Component id="cbLabo" min="-2" pref="371" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="250" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -133,7 +133,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <Component id="lbLabo" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="58" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="btnFermer" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btnPrecedent" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -142,7 +142,7 @@
                   </Group>
                   <Component id="cbLabo" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="99" max="32767" attributes="0"/>
+              <EmptySpace pref="108" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -204,6 +204,9 @@
           </StringArray>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbChercherActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="txtCodePostal">
     </Component>
@@ -232,6 +235,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="precedent"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPrecedentActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JToggleButton" name="btnSuivant">
       <Properties>
@@ -252,6 +258,9 @@
           </StringArray>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbLaboActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
