--- a/GSBVisiteurs/src/vue/V_RapportDeVisite.form
+++ b/GSBVisiteurs/src/vue/V_RapportDeVisite.form
@@ -30,7 +30,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="lbNouveauRapport" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="lbRapport" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Component id="lbBilan" alignment="0" min="-2" pref="55" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="lbMotifVisite" max="32767" attributes="0"/>
@@ -40,12 +40,12 @@
               </Group>
               <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="cbRapport" min="-2" pref="371" max="-2" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="cbPraticien" min="-2" pref="282" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="btnDetails" min="-2" pref="71" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="txtNouveauRapport" alignment="0" min="-2" pref="371" max="-2" attributes="0"/>
                   <Component id="txtMotifVisite" min="-2" pref="371" max="-2" attributes="0"/>
                   <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
                   <Component id="txtDateRapport" alignment="0" min="-2" pref="371" max="-2" attributes="0"/>
@@ -65,7 +65,7 @@
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace pref="47" max="32767" attributes="0"/>
+              <EmptySpace pref="75" max="32767" attributes="0"/>
           </Group>
           <Group type="102" attributes="0">
               <EmptySpace min="-2" pref="323" max="-2" attributes="0"/>
@@ -81,8 +81,8 @@
               <Component id="lbRapportVisite" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="lbNouveauRapport" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="txtNouveauRapport" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="lbRapport" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="cbRapport" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -146,9 +146,9 @@
         <Property name="text" type="java.lang.String" value="Rapport de visite"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="lbNouveauRapport">
+    <Component class="javax.swing.JLabel" name="lbRapport">
       <Properties>
-        <Property name="text" type="java.lang.String" value="nouveau rapport"/>
+        <Property name="text" type="java.lang.String" value="Rapport"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="lbPraticien">
@@ -198,14 +198,15 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDetailsActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JTextField" name="txtNouveauRapport">
-    </Component>
     <Component class="javax.swing.JTextField" name="txtMotifVisite">
     </Component>
     <Component class="javax.swing.JToggleButton" name="btnPrecedent">
       <Properties>
         <Property name="text" type="java.lang.String" value="precedent"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPrecedentActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JToggleButton" name="btnSuivant">
       <Properties>
@@ -274,5 +275,20 @@
         </Component>
       </SubComponents>
     </Container>
+    <Component class="javax.swing.JComboBox" name="cbRapport">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="4">
+            <StringItem index="0" value="Item 1"/>
+            <StringItem index="1" value="Item 2"/>
+            <StringItem index="2" value="Item 3"/>
+            <StringItem index="3" value="Item 4"/>
+          </StringArray>
+        </Property>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbRapportActionPerformed"/>
+      </Events>
+    </Component>
   </SubComponents>
 </Form>
